# Python-Template

./: LICENSE  README.md  console.sh  pyproject.toml  replit.nix  setup.py  template.md
cmd/: build.sh  pip.sh  rm.sh
pypackage/: __init__.py  module_a.py
tests/: sample_test.py
