[tool.poetry]
name = "Project"
version = "1.0.0"
description = "Example Python Project"
license = "LGPL-3.0"
authors = ["DillonB07 <dillonbarnes07@gmail.com>"]
readme = "README.md"
homepage = "https://dillonb07.is-a.dev"
repository = "https://github.com/DillonB07/Python-Template"

[tool.poetry.dependencies]
python = "^3.9"
dill_tils = '^1.0.6'

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = '''
/(
    | .venv
)/
'''

[tool.isort]
profile = "black"
extend_skip = [".cache"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
